# jsonata-python

./: .gitignore  pyvenv.cfg
cython/src/: pyproject.toml  sample.py
cython/src/py/: datetimeutils.py
cython/src/pyx/jsonata/cython/: datetimeutils.pyx  functions.c  functions.pyx  jexception.c  parser.pyx  signature.pyx  tokenizer.pyx  utils.c
cython/src/pyx/jsonata/cython/constants/: Constants.c  Constants.h  Constants.pyx
cython/src/pyx/jsonata/cython/jsonata-cython/: MANIFEST.in  pyproject.toml  setup.py
cython/src/pyx/jsonata/cython/jsonata-cython/src/jsonata-cython/: __init__.py  datetimeutils.pyx  jexception.pyx  sample.txt  signature.pyx  tokenizer.pyx  utils.pyx
src/jsonata/: __init__.py
src/jsonata/Constants/: Constants.py  __init__.py
src/jsonata/DateTimeUtils/: DateTimeUtils.py  Format.py  Formats.py  GroupingSeparator.py  MatcherPart.py  MatcherPartDecimal.py  MatcherPartLetters.py  MatcherPartLookup.py  MatcherPartRoman.py  MatcherPartTimeZone.py  MatcherPartWords.py  PictureFormat.py  PictureMatcher.py  RomanNumeral.py  SpecPart.py  TCase.py  YearMonth.py  __init__.py
src/jsonata/Functions/: Comparator.py  Encoder.py  Functions.py  RegexpMatch.py  __init__.py
src/jsonata/JException/: JException.py  __init__.py
src/jsonata/Jsonata/: ComparatorWrapper.py  Frame.py  GroupEntry.py  JFunction.py  JFunctionCallable.py  JFunctionSignatureValidation.py  JLambda.py  JNativeFunction.py  Jsonata.py  Transformer.py
src/jsonata/Parser/: Infix.py  InfixAnd.py  InfixAndPrefix.py  InfixArrayConstructor.py  InfixCoalesce.py  InfixDefault.py  InfixFieldWildcard.py  InfixFocusVariableBind.py  InfixFunctionInvocation.py  (+17 more)
(+14 files in other folders)
