[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonata-cython"
version = "0.1.0"
description = "A Cython-accelerated implementation of JSONata utilities."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Your Name", email = "you@example.com" },
]
keywords = ["jsonata", "cython", "json", "expression", "query"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Cython",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yourusername/jsonata-cython"
Repository = "https://github.com/yourusername/jsonata-cython"
Issues = "https://github.com/yourusername/jsonata-cython/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
